# type-info

./: Cargo.toml  README.md  release.toml
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/test/: macros.rs  mod.rs  utils.rs
example/: Cargo.toml
example/src/: lib.rs
src/: lib.rs
