[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
categories = ["data-structures"]
description = "Meta type information and type reflection at compile-time and runtime."
keywords = ["reflection", "type", "metaclass", "meta", "introspection"]
license = "MIT"
name = "type-info"
repository = "https://github.com/dflemstr/type-info"
version = "0.2.1"

[dependencies]

[workspace]
members = ["derive", "example"]

[dev-dependencies]
type-info-derive = { path = "derive", version = "0.2.0" }
