[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
categories = ["data-structures"]
description = "Meta type information and type reflection at compile-time and runtime."
keywords = ["reflection", "type", "metaclass", "meta", "introspection"]
license = "MIT"
name = "type-info-derive"
repository = "https://github.com/dflemstr/type-info"
version = "0.1.0"

[dependencies]
proc-macro2 = "0.3.6"
quote = "0.5.1"
syn = "0.13.1"

[dependencies.type-info]
version = "0.2.0"
path = ".."

[dev-dependencies]
tempfile = "3.0.1"

[dev-dependencies.syn]
features = ["full"]
version = "0.13.1"

[features]
nightly = ["proc-macro2/nightly"]

[lib]
proc-macro = true
